[package]
name = "cli-errors"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI Errors provides a wrapper type around anyhow to support exiting programs with an arbitrary exit code."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.58"
cli-errors-macros = { version = "0.3.0", path = "../cli_errors_macros" }
exitcode = "1.1.2"
