[package]
name = "cli-errors-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI Errors's proc macros."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
